--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <main>  <!---->
-        <section id="telefone">
+    <main>  <!--criou duas section dentro do main para indentificar o conteudo principal 'iphone'  e 'redes sociais '-->
+        <section id="telefone">  <!-- elemento unico para setar as propriedades no css -->
             <iframe src="home.html" name="home" id="home" frameborder="0"></iframe>
         </section>
         <section id="rede">
