--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             <iframe src="home.html" name="home" id="home" frameborder="0"></iframe>
         </section>
         <section id="redes">
-           <a href="index.html" target="home"><img src="imagens/logo-home.jpg" alt="home"></a> 
-          <a href="" target="home"><img src="imagens/logo-instagram.jpg" alt="instagram"></a>
-          <a href="#" target="home"><img src="imagens/logo-twitter.jpg" alt="twitter"></a>
-          <a href="#" target="home"><img src="imagens/logo-youtube.jpg" alt="youtube"></a>
-          <a href="" target="home"><img src="imagens/logo-facebook.jpg" alt="facebook"></a>
-          <a href="" target="home"><img src="imagens/logo-github.jpg" alt="github"></a>
+           <a href="home.html" target="home"><img src="imagens/logo-home.jpg" alt="home"></a> 
+           <a href="facebook.html" target="home"><img src="imagens/logo-facebook.jpg" alt="facebook"></a>
+          <a href="insta.html" target="home"><img src="imagens/logo-instagram.jpg" alt="instagram"></a>
+          <a href="twitter.html" target="home"><img src="imagens/logo-twitter.jpg" alt="twitter"></a>
+          <a href="youtube.html" target="home"><img src="imagens/logo-youtube.jpg" alt="youtube"></a>
+          <a href="git.html" target="home"><img src="imagens/logo-github.jpg" alt="github"></a>
           
 
         </section>
