--- a/insta.html
+++ b/insta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>instagram</title>
-    <link rel="stylesheet" href="style-social.css">
+    <link rel="stylesheet" href="estilos/style-social.css">
 </head>
 <body>
     <img src="imagens/tela-instagram.jpg" alt="tela-instagram">
